live demo added to README

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <p>Home Decor</p>
                     </div>
                     <div class="element">
-                        <div class="box-image2" style = 'background-image: url("Bedding.jpg");'></div>
+                        <div class="box-image2" style = 'background-image: url("bedding.jpg");'></div>
                         <p>Bedding</p>
                     </div>
                 </div>
