changed background colors

--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
                 Cart
             </div>
         </div>
-
         <div class="panel">
-            <div class="panel-all">
+            <div class="panel-all border">
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
             <div class="panel-opt">
-                <p>Today's Deals</p>
-                <p>Registry</p>
-                <p>Streaming</p>
-                <p>Gift Cards</p>
-                <p>Support</p>
-                <p>Sell</p>
+                <p class = "border">Today's Deals</p>
+                <p class = "border">Registry</p>
+                <p class = "border">Streaming</p>
+                <p class = "border">Gift Cards</p>
+                <p class = "border">Support</p>
+                <p class = "border">Sell</p>
             </div>
         </div>
     </header>
