expanded sales section

--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
                 <p>See more</p>
             </div>
         </div>
+        <div class="box2">
+            <h2>Up to 60% off | Trending products from Emerging Businesses</h2><p>See more</p>
+            <div class="box2-content">
+                <div class="box2-image" style = 'background-image: url("hairbrush.jpg");'></div>
+                <div class="box2-image" style = 'background-image: url("Blush.jpg");'></div>
+                <div class="box2-image" style = 'background-image: url("Headphones.jpg");'></div>
+                <div class="box2-image" style = 'background-image: url("Oil.jpg");'></div>
+                <div class="box2-image" style = 'background-image: url("Plushies.jpg");'></div>
+            </div>
+        </div>
     </div>
 
     <footer>
